# static-forth

./: LICENSE  dune-project  forth.opam
examples/: fib.f
lib/: dune
test/: dune
